--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <div class="container">
 
         <div id="question-container">
-            <h3 id="questionArea"></h1>
+            <h3 id="questionArea">
+                </h1>
                 <h1 id="question"></h1>
         </div>
         <div id="name-container">
@@ -42,10 +43,12 @@
         <button onclick="saveNames()">Save</button>
     </div>
 
-    <div id="results">
+    <div id="ResultContainer">
+        <span class="modal-close">x</span>
+        <div id="results">
 
+        </div>
     </div>
-
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://hammerjs.github.io/dist/hammer.js"></script>
