--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 <body>
     <h1>Swipiamo l'analisi</h1>
-    <p style="text-align: center;">
+    <p style="text-align: center;    margin: auto 10px 0;">
         swipa a destra per dire che è un punto di forza, a sinistra per dire che è un punto da incrementare, verso
-        l'alto per dire che non sai
+        l'alto per dire che non sai.<br> Puoi anche skippare la domanda per tutti i membri della tua unità.
     </p>
     <div style="
     flex-grow: 0.2;
