--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
         color: black;
         text-decoration: underline;    ">Risultati</a>
 
+        <a href="/compare.html" onclick="showResults()" style="
+        color: black;
+        text-decoration: underline;    ">Confronta</a>
     </div>
     <div id="nameList">
         <span class="modal-close">x</span>
