--- a/compare.html
+++ b/compare.html
@@ -5,46 +5,84 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
 
-    <title>Swipe App - Compare</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Swipe App</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    
 </head>
 
 <body>
-    <h1>Confrontiamo l'analisi</h1>
-    <p style="text-align: center;    margin: auto 10px 0;">
-        Carica i risultati e conforntali con quelli del tuo staff!
-    </p>
-    <div style="
-    flex-grow: 0.2;
-    "></div>
-    <div class="container" style="min-width: 100% !important;">
-        <form id="FileUpload">
-            <input type="file" id="files" multiple accept=".json">
-            <input type="submit" value="Carica">
-        </form>
-        <div id="result-container" style="
-        height: 80vh;
-        width: 100%;
-    ">
-            <div id="resultFileColors"></div>
-            <div id="results"></div>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <span class="navbar-brand">SwipAnalisi</span>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/index.html" onclick="showResults()">Swipa</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#HowItWorks">Come
+                            Funziona</a>
+                    </li>
+                </ul>
+            </div>
         </div>
+    </nav>
+    <div class="container-fluid d-flex flex-column" style="height: 90vh !important;overflow: auto;">
+        <div class="card text-center flex-fill">
+            <div class="card-body d-flex flex-column  align-items-center">
+                <form id="FileUpload">
+                    <div class="mb-3">
+                        <label for="files" class="form-label">Carica i files!</label>
+                        <input class="form-control" type="file" id="files" multiple accept=".json">
+                    </div>
+                    
+                    <button type="submit" class="btn btn-primary mb-3">Confronta</button>
+                </form>
 
 
+                <div class="container" style="overflow: auto;">
+                    <div id="results"></div>
+                </div>
+            </div>
+        </div>
     </div>
-    <div style="
-    flex-grow: 0.1;
-    "></div>
-    <div class="links">
 
-        <a href="/index.html" style="
-        color: black;
-        text-decoration: underline;    ">Swipa</a>
+    <!-- Region Modals -->
 
+    <!-- How It Works -->
+    <div class="modal fade" id="HowItWorks" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+        aria-labelledby="HowItWorksLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-scrollable">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="HowItWorksLabel">Come Funziona</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>
+                        Carica i file scaricati dopo aver swipato (tu e lo staff) come un folle!
+                        Poi clicca su "Confronta" e scopri se avete risposto allo stesso modo! (i colori diversi
+                        indicano risposte diverse)
+                    </p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Chiudi</button>
+                </div>
+            </div>
+        </div>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="Compara.js"></script>
+    <script src="compara.js"></script>
 </body>
 
 </html>
