--- a/index.html
+++ b/index.html
@@ -6,90 +6,152 @@
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
 
     <title>Swipe App</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="styles.css">
+
 </head>
 
 <body>
-    <h1>Swipiamo l'analisi</h1>
-    <p style="text-align: center;    margin: auto 10px 0;">
-        swipa a destra per dire che è un punto di forza, a sinistra per dire che è un punto da incrementare, verso
-        l'alto per dire che non sai.<br> Puoi anche skippare la domanda per tutti i membri della tua unità.
-    </p>
-    <div style="
-    flex-grow: 0.2;
-    "></div>
-    <div class="container">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <span class="navbar-brand">SwipAnalisi</span>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" onclick="showResults()">Risultati</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/compare.html">Compara</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#HowItWorks">Come
+                            Funziona</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <div class="container-fluid d-flex flex-column" style="min-height: 90vh !important;">
+        <div class="progress" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"
+            style="height: 2px">
+            <div class="progress-bar" id="ProgressBar" style="width: 0%"></div>
+        </div>
 
-        <div id="question-container">
-            <h3 id="questionArea"> </h3>
-            <div id="currentQuestion">
-                <h1 id="question"></h1>
-                <div id="SkipQuestion">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 16 16">
-                        <path fill="currentColor"
-                            d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM6.79 5.093A.5.5 0 0 0 6 5.5v5a.5.5 0 0 0 .79.407L9.5 8.972V10.5a.5.5 0 0 0 1 0v-5a.5.5 0 0 0-1 0v1.528L6.79 5.093z" />
-                    </svg>
+        <div class="card text-center flex-fill">
+            <div class="card-body d-flex flex-column  align-items-center">
+
+                <h6 class="card-subtitle text-body-secondary" id="questionArea">Area</h6>
+                <h5 class="card-title mb-4" id="question">Lorem ipsum dolor sit amet sit ques lalalal stani</h5>
+                <a class="btn btn-outline-dark btn-sm" href="#" id="SkipQuestion">Salta Domanda</a>
+
+                <div class="flex-grow-1"></div>
+
+                <div class="container align-items-center align-middle">
+                    <div class="row mb-5">
+                        <div class="col">
+                            <i class="bi bi-question-lg text-warning fw-bold" width="32" height="32"></i>
+                        </div>
+                    </div>
+                    <div class="row justify-content-between mt-5">
+                        <div class="col-1 align-self-center">
+                            <i class="bi bi-x-lg text-danger fw-bold" width="32" height="32"></i>
+                        </div>
+                        <div class="col-6 bg-primary text-white p-4 rounded d-flex align-items-center justify-content-center" style="height: 150px;"
+                            id="SwipeCard">
+                            <p id="name"></p>
+                        </div>
+                        <div class="col-1 align-self-center">
+                            <i class="bi bi-check-lg text-success fw-bold" width="32" height="32"></i>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-        <div id="name-container">
-            <div id="swipe-up">
-                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 384 512" class="swipe-icon">
-                    <path fill="currentColor"
-                        d="M202.021 0C122.202 0 70.503 32.703 29.914 91.026c-7.363 10.58-5.093 25.086 5.178 32.874l43.138 32.709c10.373 7.865 25.132 6.026 33.253-4.148c25.049-31.381 43.63-49.449 82.757-49.449c30.764 0 68.816 19.799 68.816 49.631c0 22.552-18.617 34.134-48.993 51.164c-35.423 19.86-82.299 44.576-82.299 106.405V320c0 13.255 10.745 24 24 24h72.471c13.255 0 24-10.745 24-24v-5.773c0-42.86 125.268-44.645 125.268-160.627C377.504 66.256 286.902 0 202.021 0zM192 373.459c-38.196 0-69.271 31.075-69.271 69.271c0 38.195 31.075 69.27 69.271 69.27s69.271-31.075 69.271-69.271s-31.075-69.27-69.271-69.27z" />
-                </svg>
-            </div>
-            <div id="swipe-left">
-                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 20 20" class="swipe-icon">
-                    <path fill="currentColor"
-                        d="m12.12 10l3.53 3.53l-2.12 2.12L10 12.12l-3.54 3.54l-2.12-2.12L7.88 10L4.34 6.46l2.12-2.12L10 7.88l3.54-3.53l2.12 2.12z" />
-                </svg>
-            </div>
-            <div id="swipe-card" class="card">
-                <p id="name"></p>
-            </div>
+    </div>
 
-            <div id="swipe-right">
-                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 20 20" class="swipe-icon">
-                    <path fill="currentColor" d="m14.83 4.89l1.34.94l-5.81 8.38H9.02L5.78 9.67l1.34-1.25l2.57 2.4z" />
-                </svg>
+    <!-- Region Modals -->
+
+    <!-- How It Works -->
+    <div class="modal fade" id="HowItWorks" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+        aria-labelledby="HowItWorksLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-scrollable">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="HowItWorksLabel">Come Funziona</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>
+                        swipa a destra per dire che è un punto di forza, a sinistra per dire che è un punto da
+                        incrementare, verso
+                        l'alto per dire che non sai.<br> Puoi anche skippare la domanda per tutti i membri della tua
+                        unità.
+                    </p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Chiudi</button>
+                </div>
             </div>
         </div>
-
-
-
-
-    </div>
-    <div style="
-    flex-grow: 0.1;
-    "></div>
-    <div class="links">
-
-        <a href="#" onclick="showResults()" style="
-        color: black;
-        text-decoration: underline;    ">Risultati</a>
-
-        <a href="/compare.html" onclick="showResults()" style="
-        color: black;
-        text-decoration: underline;    ">Confronta</a>
-    </div>
-    <div id="nameList">
-        <span class="modal-close">x</span>
-        <h3>Add your names</h3>
-        <p>Aggiungi i nomi della tua unità, poi clicca su salva! metti i nomi uno per riga!</p>
-        <textarea id="TextAreaNames" placeholder="Enter names here"></textarea>
-
-        <button onclick="saveNames()">Save</button>
     </div>
 
-    <div id="ResultContainer">
-        <span class="modal-close">x</span>
-        <div id="results">
+    <!-- Results -->
+    <div class="modal fade" id="ResultModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+        aria-labelledby="ResultModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-scrollable modal-xl">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="ResultModalsLabel">Come Funziona</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div id="results">
 
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <a href="#" class="btn btn-outline-dark" onclick="DownloadResults()">Scarica Risultati</a>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Chiudi</button>
+                </div>
+            </div>
         </div>
-        <a href="#" onclick="DownloadResults()" style="margin-top: 10px;">Scarica Risultati</a>
     </div>
 
+
+    <!-- Names -->
+    <div class="modal fade" id="NamesModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+        aria-labelledby="NamesModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-scrollable">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="NamesModalLabel">Come Funziona</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <h3>Add your names</h3>
+                    <p>Aggiungi i nomi della tua unità, poi clicca su salva! metti i nomi uno per riga!</p>
+                    <textarea id="TextAreaNames" class="form-control" placeholder="Inserisci i nomi. Uno per riga!"
+                        style="height: 200px;"></textarea>
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-success" data-bs-dismiss="modal"
+                        onclick="saveNames()">Salva</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://hammerjs.github.io/dist/hammer.js"></script>
     <script src="script.js"></script>
