--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <div class="modal-dialog modal-dialog-scrollable modal-xl">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="ResultModalsLabel">Come Funziona</h1>
+                    <h1 class="modal-title fs-5" id="ResultModalsLabel">Risultati</h1>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -130,11 +130,10 @@
         <div class="modal-dialog modal-dialog-scrollable">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="NamesModalLabel">Come Funziona</h1>
+                    <h1 class="modal-title fs-5" id="NamesModalLabel">Inserisci i nomi</h1>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <h3>Add your names</h3>
                     <p>Aggiungi i nomi della tua unità, poi clicca su salva! metti i nomi uno per riga!</p>
                     <textarea id="TextAreaNames" class="form-control" placeholder="Inserisci i nomi. Uno per riga!"
                         style="height: 200px;"></textarea>
